tools/huggingface-k8s-dockerizer/base/localai.phi-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phi-2-llm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phi-2-llm
  template:
    metadata:
      labels:
        app: phi-2-llm
    spec:
      containers:
      - name: phi-2-llm
        image: localai/localai:v2.9.0-ffmpeg-core
        args: ["phi-2"]  # change this to one of the supported models https://localai.io/basics/getting_started/index.html
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
  
        # CPU related
        resources:
          limits:
            cpu: 2000m
            memory: 2G
          requests:
            cpu: 1000m
            memory: 1G 

        # GPU related 
        #  resources:
        #     limits:
        #       nvidia.com/gpu: 1  
        #     requests:
        #       nvidia.com/gpu: 1 
        #   volumeMounts:
        #   - mountPath: /dev/shm
        #     name: dshm
        # tolerations:
        #   - key: "nvidia.com/gpu"
        #     operator: "Exists"
        #     effect: "NoSchedule"
        # volumes:
        #   - name: dshm
        #     persistentVolumeClaim:
        #       claimName: dshm  
---
apiVersion: v1
kind: Service
metadata:
  name: phi-2-llm
spec:
  type: ClusterIP
  selector:
    app: phi-2-llm
  ports:
  - name: http
    port: 8080
    targetPort: 8080  

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phi-2-llm-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: internal-nginx
  tls:
  - hosts:
    - phi-2-llm-frank1147.internal.jambit.io
  rules:
  - host: phi-2-llm-frank1147.internal.jambit.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: phi-2-llm
            port:
              name: "http"
